# global_userbot_telegram

./: README.md  gh_push.sh  pubspec.yaml
.github/: FUNDING.yml
.github/workflows/: beta_compile.yaml
native_lib/: CMakeLists.txt  readme.md
package/global_userbot_telegram/: pubspec.yaml
package/global_userbot_telegram/example/: global_userbot_telegram_example.dart
package/global_userbot_telegram/lib/: global_userbot_telegram.dart
package/global_userbot_telegram/test/: global_userbot_telegram_test.dart
package/global_userbot_telegram_android/: pubspec.yaml
package/global_userbot_telegram_android/lib/: global_userbot_telegram_android.dart
package/global_userbot_telegram_android/test/: global_userbot_telegram_android_test.dart
package/global_userbot_telegram_apis/: pubspec.yaml
package/global_userbot_telegram_apis/example/: global_userbot_telegram_apis_example.dart
package/global_userbot_telegram_apis/lib/: global_userbot_telegram_apis.dart
package/global_userbot_telegram_apis/test/: global_userbot_telegram_apis_test.dart
package/global_userbot_telegram_assets_flutter/: pubspec.yaml
package/global_userbot_telegram_assets_flutter/lib/: global_userbot_telegram_assets_flutter.dart
package/global_userbot_telegram_assets_flutter/test/: global_userbot_telegram_assets_flutter_test.dart
package/global_userbot_telegram_cli/: pubspec.yaml
package/global_userbot_telegram_cli/example/: global_userbot_telegram_cli_example.dart
package/global_userbot_telegram_client/: README.md  pubspec.yaml
package/global_userbot_telegram_dart/: pubspec.yaml
package/global_userbot_telegram_flutter/: pubspec.yaml
package/global_userbot_telegram_fucshia/: pubspec.yaml
package/global_userbot_telegram_ios/: pubspec.yaml
package/global_userbot_telegram_isar_scheme/: pubspec.yaml
package/global_userbot_telegram_linux/: pubspec.yaml
package/global_userbot_telegram_macos/: pubspec.yaml
package/global_userbot_telegram_scheme/: pubspec.yaml
package/global_userbot_telegram_server/: pubspec.yaml
package/global_userbot_telegram_web/: pubspec.yaml
package/global_userbot_telegram_windows/: pubspec.yaml
test/: global_userbot_telegram_test.dart
(+31 files in other folders)
